<resources>
    <string name="app_name">Github User</string>
    <string name="user">User</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="follower_holder">12</string>
    <string name="following_holder">12</string>
    <string name="repo_holder">12</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="username">Username</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>